--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ button {
   user-select: none;
 }
 
+.button-hoverclass:hover {
+  cursor: pointer;
+  background-color: black;
+  text-shadow: 0px 0px 10px white;
+}
+
 .deal-button {
   position: absolute;
   font-family: "Noto Serif Lao", serif;
@@ -46,12 +52,6 @@ button {
   border-radius: 5px;
 }
 
-.deal-button:hover {
-  cursor: pointer;
-  background-color: black;
-  text-shadow: 0px 0px 10px white;
-}
-
 .deal-button::after {
   position: absolute;
   content: "";
@@ -66,9 +66,7 @@ button {
 }
 
 .hit-button,
-.double-button,
 .stand-button,
-.insure-button,
 .replay-button {
   font-family: "Noto Serif Lao", serif;
   font-size: 20px;
@@ -90,9 +88,7 @@ button {
 }
 
 .hit-button::after,
-.double-button::after,
 .stand-button::after,
-.insure-button::after,
 .replay-button::after {
   position: absolute;
   content: "";
@@ -104,14 +100,6 @@ button {
   left: 0;
   top: 0;
   border-radius: 5px;
-}
-
-.hit-button:hover,
-.stand-button:hover,
-.replay-button:hover {
-  cursor: pointer;
-  background-color: black;
-  text-shadow: 0px 0px 10px white;
 }
 
 .console {
